Fixed overflow of item list

--- a/client/src/components/inventory/Inventory.css
+++ b/client/src/components/inventory/Inventory.css
@@ -38,8 +38,7 @@
 
 .inventory-content {
     max-height: 100%;
-    overflow: auto;
-    padding: 2rem;
+    /* overflow: auto; */
     border-radius: 2rem;
     background-color: var(--grey-light)
 }
