--- a/client/src/components/pages/item_list/ItemList.css
+++ b/client/src/components/pages/item_list/ItemList.css
@@ -5,6 +5,8 @@
     max-width: 100rem;
     height: 100%;
     gap: 1rem;
+    padding: 2rem;
+    overflow: auto;
 }
 
 .item-list>a {
